--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,13 @@
     opacity: 1;
     visibility: visible;
 }
+.overlay1,
+.overlay2 {
+    opacity: 0.4;
+    transform: translateZ(0);
+    transition: opacity 0.6s ease;
+    will-change: opacity;
+}
 .title-gradient {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -341,5 +348,4 @@ main {
         border: 1px solid #4285f4;
         box-shadow: 0 0 20px #e8e8e8;
     }
-
 }
