--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,11 @@
     cursor: pointer;
     display: grid;
 }
-[id="img [0]"] {height: clamp(45px, 10vw, 54px)}
+[id="img [0]"] {
+    height: 10vw;
+    max-height: 54px;
+    min-height: 45px;
+}
 [id="img [1]"] {
     border-radius: 50%;
     height: clamp(160px, 15vw, 180px);
@@ -349,5 +353,3 @@ main {
         box-shadow: 0 0 20px #e8e8e8;
     }
 }
-
-
