--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ section div div {
     color: black;
     padding: 30px;
 }
+[id="section [1]"] {margin: 20px 0 0 0}
 footer {
     align-items: center;
     background-color: white;
@@ -157,7 +158,7 @@ h4 {
 }
 h5 {
     color: #4a90e2ff;
-    margin: 10px 0 25px 0;
+    margin: 10px 0 10px 0;
 }
 h5,
 h6 {
